# MediaSite

./: .gitignore  CMakeLists.txt  ExecuteDebug.bat  ExecuteRelease.bat  LICENSE  README.md
src/: CommandLineOptions.cpp  CommandLineOptions.hpp  HTTPSServer.cpp  HTTPSServer.hpp  HTTPServer.cpp  HTTPServer.hpp  Server.cpp  Server.hpp  main.cpp  tools.cpp  tools.hpp
src/resources/: index.html
src/resources/catalog/: index.html  style.css
src/resources/css/: custom_list.css  default_layout.css
src/resources/js/: display_header.js
src/resources/resources/: films.json
src/resources/resources/clone-wars/: poster.jfif
src/resources/watch/: index.html  style.css
web_server/: CMakeLists.txt  CopyResources.bat  Execute.bat  ExecuteDebug.bat  GenerateModule.bat
web_server/src/: Server.cpp  Server.hpp  main.cpp
web_server/src/resources/: index.html
web_server/src/resources/catalog/: index.html  on_load.js  style.css
web_server/src/resources/css/: default_layout.css
web_server/src/resources/js/: create_seasons_tree.js
web_server/src/resources/resources/: films.json
web_server/src/resources/select/: index.html  style.css
web_server/src/resources/watch/: index.html  on_load.js  style.css
